--- a/socketWebRTC/Base.lproj/Main.storyboard
+++ b/socketWebRTC/Base.lproj/Main.storyboard
@@ -653,7 +653,7 @@ with the provided address</string>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmK-Aj-SDK">
-                                <rect key="frame" x="110" y="325" width="80" height="30"/>
+                                <rect key="frame" x="50" y="325" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="10I-2P-sBQ"/>
                                     <constraint firstAttribute="height" constant="30" id="MVP-Kq-Rxx"/>
@@ -664,8 +664,19 @@ with the provided address</string>
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Sxg-h4-boQ">
-                                <rect key="frame" x="82" y="330" width="20" height="20"/>
+                                <rect key="frame" x="22" y="330" width="20" height="20"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vfx-u0-t8E">
+                                <rect key="frame" x="170" y="325" width="80" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3df-dr-c3M"/>
+                                    <constraint firstAttribute="width" constant="80" id="9fy-3h-Xu6"/>
+                                </constraints>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="closeBtnPressed:" destination="J29-cv-0fY" eventType="touchUpInside" id="tEa-aC-AgU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -684,15 +695,17 @@ with the provided address</string>
                             <constraint firstItem="fv2-DN-nzr" firstAttribute="top" secondItem="KdG-BH-Ubs" secondAttribute="bottom" constant="30" id="HoX-6k-23h"/>
                             <constraint firstItem="zfY-4u-kcp" firstAttribute="centerY" secondItem="YT5-ey-jg8" secondAttribute="centerY" id="Hrq-Gx-Pib"/>
                             <constraint firstItem="RKB-hV-sHY" firstAttribute="leading" secondItem="fv2-DN-nzr" secondAttribute="trailing" constant="6" id="HvJ-nb-swe"/>
+                            <constraint firstItem="Vfx-u0-t8E" firstAttribute="centerY" secondItem="VmK-Aj-SDK" secondAttribute="centerY" id="IUK-mJ-Q83"/>
                             <constraint firstItem="zfY-4u-kcp" firstAttribute="centerX" secondItem="Vrf-ze-cko" secondAttribute="centerX" id="JA1-dU-7dJ"/>
                             <constraint firstItem="zfY-4u-kcp" firstAttribute="leading" secondItem="Ke6-Ly-Gx7" secondAttribute="leading" id="Jfe-4o-7LG"/>
                             <constraint firstItem="1aw-pe-qDb" firstAttribute="leading" secondItem="YT5-ey-jg8" secondAttribute="leading" id="KLv-HE-adW"/>
                             <constraint firstItem="6z3-l6-CpJ" firstAttribute="leading" secondItem="ecI-bX-wcp" secondAttribute="leading" id="LAH-Fb-Nmz"/>
+                            <constraint firstItem="Vfx-u0-t8E" firstAttribute="centerX" secondItem="sxn-ws-CyA" secondAttribute="centerX" constant="60" id="MYO-QU-Ib3"/>
                             <constraint firstItem="zfY-4u-kcp" firstAttribute="trailing" secondItem="Ke6-Ly-Gx7" secondAttribute="trailing" id="MZM-Ca-ADS"/>
                             <constraint firstItem="RKB-hV-sHY" firstAttribute="centerY" secondItem="fv2-DN-nzr" secondAttribute="centerY" id="N9Z-6M-42L"/>
                             <constraint firstItem="YT5-ey-jg8" firstAttribute="trailing" secondItem="9sR-mV-CNj" secondAttribute="trailing" id="OCu-kh-MFZ"/>
                             <constraint firstItem="OFa-gZ-dSI" firstAttribute="leading" secondItem="kPV-md-UxN" secondAttribute="leading" id="OJ1-th-MfW"/>
-                            <constraint firstItem="VmK-Aj-SDK" firstAttribute="centerX" secondItem="sxn-ws-CyA" secondAttribute="centerX" id="R78-4e-2WH"/>
+                            <constraint firstItem="VmK-Aj-SDK" firstAttribute="centerX" secondItem="sxn-ws-CyA" secondAttribute="centerX" constant="-60" id="R78-4e-2WH"/>
                             <constraint firstItem="Ke6-Ly-Gx7" firstAttribute="centerY" secondItem="9sR-mV-CNj" secondAttribute="centerY" id="SdD-wn-8PD"/>
                             <constraint firstItem="6z3-l6-CpJ" firstAttribute="trailing" secondItem="ecI-bX-wcp" secondAttribute="trailing" id="TBU-pS-sH4"/>
                             <constraint firstItem="pKK-yA-yoc" firstAttribute="leading" secondItem="6z3-l6-CpJ" secondAttribute="leading" id="TYe-h5-9uK"/>
@@ -723,6 +736,7 @@ with the provided address</string>
                     <size key="freeformSize" width="300" height="400"/>
                     <connections>
                         <outlet property="cityLabel" destination="pKK-yA-yoc" id="1Nm-Iv-ziC"/>
+                        <outlet property="closeBtn" destination="Vfx-u0-t8E" id="HMv-7N-VwX"/>
                         <outlet property="firstNameTextField" destination="RKB-hV-sHY" id="phN-PH-DxZ"/>
                         <outlet property="indicatorLoading" destination="Sxg-h4-boQ" id="uLP-re-PjO"/>
                         <outlet property="lastNameTextField" destination="6rN-pO-qaU" id="b46-SH-nla"/>
